syntax = "proto3";

package coordinator;

option go_package = "github.com/jmsadair/keychain/proto/pbcoordinator";

import "google/protobuf/timestamp.proto";

// An operation that adds a member to a chain.
message AddMemberOperation {
	// The address of the member being added.
	string member = 1;
}

// An operation that removes a member from a chain.
message RemoveMemberOperation {
	// The address of the member being removed.
	string member = 1;
}

// An operation to read the current chain membership configuration.
message ReadMembershipOperation {}

// An operation that will be replicated across a raft cluster.
message ReplicatedOperation {
	oneof operation {
		AddMemberOperation add_member = 1;
		RemoveMemberOperation remove_member = 2;
		ReadMembershipOperation read_membership = 3;
	}
}

// Log is a log entry in the raft log.
message Log {
	// The index of this log entry.
	uint64 index = 1;
	// The election term of this log entry.
	uint64 term = 2;
	// The type of this log entry.
	uint32 type = 3;
	// The data of this log entry.
	bytes data = 4;
	// The extensions for this log entry.
	bytes extensions = 5;
	// The time at which this log entry was appended to the log.
	google.protobuf.Timestamp appended_at = 6;
}
